# pybase

./: .gitignore  README.md  build_cpp.py  build_modern.py  pyproject.toml  setup.py
docs/: BUILD_COMPARISON.md  CLI_USAGE.md  CONFTEST.md  CPP_BUILD.md  ENTRY_POINTS.md  GUI_USAGE.md  TESTING.md
examples/: transform_example.py
src/pybase/: cli.py  gui.py  transform.cpp  transform.h  transform.py  transform_binding.cpp
src/pybase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py  common.py  conftest.py  test_cli.py  test_simple.py  test_transform.py
